Fixed bug where landing page profile image was not showing up.

--- a/src/App.css
+++ b/src/App.css
@@ -105,6 +105,18 @@ body {
   margin: 35px 100px 0 auto;
 }
 
+.info-profile-image {
+  width: 50px;
+  height: 50px;
+  color: white;
+  background-color: #3D9970;
+  font-size: 28px;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .main-title {
   font-size: 36px;
 }
